# candyland

./: .dockerignore  .gitignore  .gitmodules  Anchor.toml  Api.Dockerfile  Cargo.toml  ConcurrentMerkle-cost.ipynb  Ingest.Dockerfile  Load.Dockerfile  Merkle.ipynb  README.md  Solana.Dockerfile  build-docker.sh  build.sh  configure-anchor.sh  docker-compose.yaml  init.sql  link-local-sdks.sh  package.json  run-docker-fast.sh  run-docker.sh  skaffold-state.json  skaffold.yaml  tree.sql  unlink-local-sdks.sh
.github/workflows/: contracts-local-run.yml
archive/: MerkleData.ipynb  tree.sql
archive/merkle_wallet/: Cargo.toml
cli/: README.md  gummyroll-crud-cli.ts  hash-cli.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
cli/batchmint/: README.md  gummyroll-crud-cli.ts
cli/gumball-machine/: README.md  gumball-machine-cli.ts
cli/helpers/: constants.ts  crud.ts  utils.ts
contracts/: Anchor.toml  Cargo.toml  README.md  package.json  sams-runs.sh  tsconfig.json
contracts/idl/: bubblegum.json  gumball_machine.json  gummyroll.json  sugar_shack.json
contracts/programs/gumball-machine/: Cargo.toml
contracts/programs/gumball-machine/src/: lib.rs  utils.rs
contracts/programs/gumball-machine/src/state/: mod.rs
contracts/programs/gumdrop/: Cargo.toml
contracts/programs/gumdrop/src/: lib.rs
contracts/programs/sugar-shack/: Cargo.toml
contracts/programs/sugar-shack/src/: lib.rs
contracts/tests/: bubblegum-test-rpc-fast.ts  bubblegum-test-rpc.ts  bubblegum-test.ts  continuous_gummyroll-test.ts  gumball-machine-test.ts  gumdrop-test.ts  gumdropTree.ts  gummyroll-test.ts  myprog-test.ts  package.json  sugar-shack-test.ts  utils.ts
das_api/: Cargo.toml
das_api/src/: api.rs  api_impl.rs  config.rs  error.rs  main.rs  rpc-tests.http  validation.rs
digital_asset_types/: Cargo.toml  openrpc.json
digital_asset_types/src/: lib.rs
digital_asset_types/src/adapter/: metadata.rs  mod.rs
digital_asset_types/src/dao/: asset.rs  asset_authority.rs  asset_creators.rs  asset_data.rs  asset_grouping.rs  backfill_items.rs  cl_items.rs  mod.rs  prelude.rs  raw_txn.rs  sea_orm_active_enums.rs
digital_asset_types/src/dapi/: asset.rs  assets_by_creator.rs  assets_by_group.rs  assets_by_owner.rs  change_logs.rs  listed_assets_by_owner.rs  mod.rs  offers_by_owner.rs  test.rs  utils.rs
digital_asset_types/src/dapi/tests/: starter.rs
digital_asset_types/src/dapi/tests/utils/: mod.rs  setup_functions.rs
digital_asset_types/src/json/: chain_data.rs  mod.rs
digital_asset_types/src/rpc/: asset.rs  filter.rs  mod.rs  response.rs  sale.rs
digital_asset_types/src/sql/: mod.rs
digital_asset_types/src/tests/: get_asset_by_id.rs  get_assets_by_creator.rs  get_assets_by_group.rs  get_assets_by_owner.rs  mod.rs  utils.rs
docker/: Dockerfile  fetch-spl.sh  runs.sh
ecc-accumulator/: Cargo.toml
gummyroll-crud-ui/: .env  .eslintrc.json  README.md  next.config.js  package.json
gummyroll-crud-ui/components/: AnchorConfigurator.tsx  AssetImage.tsx  BufferData.tsx  Button.tsx  HashImage.tsx  ItemImage.tsx  OwnerAsset.tsx  OwnerItem.tsx  SearchBar.tsx  TreeSelect.tsx
gummyroll-crud-ui/pages/: 404.tsx  _app.tsx  index.tsx
gummyroll-crud-ui/styles/: AssetDetails.css.ts  BufferData.css.ts  Button.css.ts  SearchBar.css.ts  app.css.ts
helm/api/: values.yaml
helm/ingest/: Chart.yaml  values.yaml
lib/snapshot-backfill/: Cargo.toml
lib/snapshot-backfill/src/: error.rs  main.rs
merkle-accumulator/: Cargo.toml
messenger/: Cargo.toml
messenger/src/: async_redis_messenger.rs  error.rs  lib.rs  messenger.rs  redis_messenger.rs
nft_api/: Cargo.toml  Dockerfile
nft_api/src/: error.rs  lib.rs  main.rs
nft_api/src/api/: mod.rs
nft_api/src/error/: mod.rs
nft_api/src/events/: mod.rs
nft_api/src/ingest/: bubblegum_indexer.rs  crud_indexer.rs  gummyroll_indexer.rs  main.rs  mod.rs  transaction_info_generated.rs  utils.rs
nft_api/src/models/: app_specific.rs  cl_items.rs  mod.rs  prelude.rs
nft_ingester/: Cargo.toml
nft_ingester/src/: backfiller.rs  bubblegum_indexer.rs  gummyroll_indexer.rs  lib.rs  main.rs  mod.rs  utils.rs
nft_ingester/src/error/: mod.rs
nft_ingester/src/events/: mod.rs
nft_ingester/src/parsers/: bubblegum.rs  crud.rs  gummy_roll.rs  gummyroll.rs  mod.rs
nft_ingester/src/tasks/: mod.rs
nft_ingester/src/utils/: instructions.rs  logs.rs  mod.rs  storage.rs
plerkle/: Cargo.toml  Dockerfile  transaction_info.fbs
plerkle/src/: async_redis_messenger.rs  constants.rs  error.rs  example-config.json  geyser_plugin_nft.rs  lib.rs  macros.rs  messenger.rs  redis_messenger.rs  serializer.rs  transaction_info_generated.rs  transaction_selector.rs
plerkle/src/messenger/: mod.rs
plerkle/src/program_parser/: mod.rs
plerkle/src/programs/: gummy_roll.rs  mod.rs
plerkle_serialization/: Cargo.toml  account_info.fbs  block_info.fbs  generate_flatbuffers_code.sh  slot_status_info.fbs  transaction_info.fbs
plerkle_serialization/src/: account_info_generated.rs  block_info_generated.rs  lib.rs  plerkle_serialized.rs  slot_status_info_generated.rs  transaction_info_generated.rs
programs/: Cargo.toml
programs/bubblegum/: Cargo.toml
programs/bubblegum/src/: lib.rs  state.rs  utils.rs
programs/bubblegum/src/state/: leaf_schema.rs  metaplex_adapter.rs  mod.rs
programs/gummyroll/: Cargo.toml
programs/gummyroll/src/: lib.rs  utils.rs
programs/gummyroll/src/state/: change_log.rs  merkle_roll.rs  mod.rs  node.rs
programs/merkle_wallet/: Cargo.toml
programs/merkle_wallet/src/: lib.rs
programs/merkle_wallet/src/state/: metaplex_anchor.rs  spl_token_2022_anchor.rs
programs/mint-compressor/: Cargo.toml
programs/mint-compressor/src/: lib.rs
server/: merkle-tree.ts  package-lock.json  package.json  server.ts
tests/: baka-test.ts  bubblegum-test.ts  continuous-gummyroll.ts  continuous_gummyroll-test.ts  demo-test.ts  gumball-machine-serde.ts  gumball-machine-test.ts  gummyroll-test.ts  gummyroll.ts  gummyroll_crud-test.ts  gummyroll_crud.ts  merkle-roll-serde.ts  merkle-tree.ts  merkle_wallet.ts  txLength.ts  utils.ts
(+165 files in other folders)
