[package]
name = "digital_asset_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["json_types", "sql_types"]
json_types = ["serde", "serde_json"]
sql_types = ["sea-orm"]
mock = []

[dependencies]
sea-orm = { optional = true, version="0.9.0", features = [ "macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
sea-query = {version="0.25.0", features = ["postgres-array"]}
serde = { version = "1.0.137", optional = true }
serde_json = { version = "1.0.81", optional = true }
bs58 = "0.4.0"
borsh = { version = "0.9.3", optional = true }
borsh-derive = { version = "0.9.3", optional = true }
solana-sdk = { version = "=1.10.10" }
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.31"
concurrent-merkle-tree = {path = "../lib/concurrent-merkle-tree" }
mpl-token-metadata = { git = "https://github.com/jarry-xiao/metaplex-program-library", rev = "7e2810a", features = ["no-entrypoint"] }
jsonpath_lib = "0.3.0"
mime_guess = "2.0.4"
url = "2.2.2"
anchor-client = { path="../deps/anchor/client" }
futures= "0.3.21"
tokio = { version="1.19.2" }