[package]
name = "ecc-accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
curve25519-dalek = "3"
rand = "0.7"
sha2 = { version = "0.9", default-features = false  }
tokio = { version = "1.6", features = ["macros"] }

