[package]
name = "messenger"
description = "Metaplex Messenger trait for Geyser plugin producer/consumer patterns."
version = "0.1.0"
edition = "2021"
license = "AGPL3"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-geyser-plugin-interface"

[dependencies]
plerkle-serialization={path= "../plerkle_serialization"}
redis = {version = "0.21.5", features = ["aio", "tokio-comp", "streams", 'cluster'], optional = true}
log = "0.4.11"
thiserror = "1.0.30"
async-trait = "0.1.53"
figment = "0.10.6"
serde = "1.0.137"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["redis"]
redis = ["dep:redis"]