[package]
name = "nft_api"
version = "0.1.0"
edition = "2021"

[dependencies]
routerify = "3"
routerify-json-response = "3"
redis = {version = "0.21.5", features = ["aio", "tokio-comp", "streams"]}
futures-util = "0.3.0"
hyper = "0.14"
anchor-client="0.22.1"
base64 = "0.13.0"
thiserror = "1.0.30"
merk = { git= "https://github.com/nomic-io/merk", ref="develop"}
tokio = { version = "1.17.0", features = ["full"] }
gummyroll={path= "../programs/gummyroll", features = ["no-entrypoint"]}
tokio-postgres = "0.7.5"