[package]
name = "nft_api"
version = "0.1.0"
edition = "2021"

[lib]
name="nft_api_lib"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "ingest"
path = "src/ingest/main.rs"

[dependencies]
hex = "0.4.3"
routerify = "3"
routerify-json-response = "3"
redis = {version = "0.21.5", features = ["aio", "tokio-comp", "streams"]}
futures = "0.3.21"
futures-util = "0.3.0"
hyper = "0.14"
anchor-client = { path = "../deps/anchor/client" }
base64 = "0.13.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
gummyroll={path= "../programs/gummyroll", features = ["no-entrypoint"]}
sqlx = {version = "0.5.11", features = ["runtime-tokio-rustls","postgres"] }
tokio-postgres = "0.7.5"
serde = "1.0.136"
bs58="0.4.0"
reqwest="0.11.10"
csv="1.1.6"
messenger={path= "../messenger"}
flatbuffers = "2.1.2"
solana-sdk = { version = "=1.10.10" }
lazy_static = "1.4.0"
regex = "1.5.5"
gummyroll-crud={path= "../programs/gummyroll_crud", features = ["no-entrypoint"]}
plerkle={path= "../plerkle"}
plerkle-serialization={path= "../plerkle_serialization"}

[dependencies.num-integer]
version = "0.1.44"
default-features = false
