[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "plerkle"
description = "The Solana Geyser plugin interface."
version = "1.10.3"
repository = "https://github.com/solana-labs/solana"
license = "AGPL3"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-geyser-plugin-interface"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redis = {version = "0.21.5", features = ["streams"]}
log = "0.4.11"
async-trait = "0.1.53"
solana-sdk = { version = "=1.10.3" }
solana-transaction-status = { version = "=1.10.3" }
thiserror = "1.0.30"
regex = "1.5.5"
base64 = "0.13.0"
lazy_static = "1.4.0"
solana-geyser-plugin-interface  = { version = "=1.10.3" }
solana-logger = { version = "=1.10.3" }
solana-measure = { version = "=1.10.3" }
solana-metrics = { version = "=1.10.3" }
solana-runtime = { version = "=1.10.3" }
anchor-client = "0.22.1"
gummyroll={path= "../programs/gummyroll", features = ["no-entrypoint"]}
gummyroll-crud={path= "../programs/gummyroll_crud", features = ["no-entrypoint"]}
bs58 = "0.4.0"
bytemuck = "1.7.2"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
hex = "0.4.3"
messenger={path= "../messenger"}

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]