[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "plerkle"
description = "The Solana Geyser plugin interface."
version = "1.10.3"
repository = "https://github.com/solana-labs/solana"
license = "AGPL3"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-geyser-plugin-interface"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
async-trait = "0.1.53"
solana-sdk = { version = "=1.11.3" }
solana-transaction-status = { version = "=1.11.3" }
thiserror = "1.0.30"
base64 = "0.13.0"
lazy_static = "1.4.0"
solana-geyser-plugin-interface  = { version = "=1.11.3" }
solana-logger = { version = "=1.11.3" }
bs58 = "0.4.0"
bytemuck = "1.7.2"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
cadence = "0.29.0"
cadence-macros = "0.29.0"
chrono = "0.4.19" # did anyone say leftpad ?
solana-runtime = "1.11.3"
tracing = "0.1.35"
hex = "0.4.3"
messenger={path= "../messenger"}
flatbuffers = "2.1.2"
plerkle-serialization={path= "../plerkle_serialization"}
tokio = { version = "1.17.0", features = ["full"] }
figment = { version = "0.10.6", features = ["env"] }

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
