[workspace]
[package]
name = "snapshot-backfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
solana-client = "1.10.23"
solana-sdk = "1.10.24"
structopt = "0.3.26"
bs58 = "0.4.0"
solana-transaction-status = "1.10.23"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
