[package]
name = "bubblegum"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bubblegum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = {version = "^0.22.1"}
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", features = [ "no-entrypoint" ] }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library", features = [ "no-entrypoint" ] }
mpl-token-metadata = { git = "https://github.com/jarry-xiao/metaplex-program-library", rev="7e2810a", features = [ "no-entrypoint" ] }
gummyroll = { path = "../gummyroll", features = ["cpi"] }
bytemuck = "1.8.0"
