[package]
name = "merkle-wallet"
version = "0.1.0"
description = "Merkle tree compression of collections of accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_wallet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = {version = "0.21.0", features = [ "init-if-needed" ]}
anchor-spl = {version = "0.21.0"}
borsh = "0.9.2"
solana-program = "1.8"
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library/", features = [ "no-entrypoint" ], branch = "master" }
mpl-token-metadata = { version = "1.1.0", features = [ "no-entrypoint" ] }
mpl-candy-machine = { version = "3.0.0", features = [ "no-entrypoint", "cpi" ] }