[package]
name = "merkle-wallet"
version = "0.1.0"
description = "Merkle tree compression of collections of accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_wallet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = {version = "^0.22.1", features = [ "init-if-needed" ]}
anchor-spl = {version = "^0.22.1"}
borsh = "0.9.2"
solana-program = "^1.9.9"
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", features = [ "no-entrypoint" ] }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library", features = [ "no-entrypoint" ] }
mpl-token-metadata = { git = "https://github.com/jarry-xiao/metaplex-program-library", rev="7e2810a", features = [ "no-entrypoint" ] }