[package]
name = "gumball-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gumball_machine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0" }
anchor-spl = { version = "0.25.0" }
bs58 = "0.4.0"
spl-token = "3.3.0"
mpl-token-metadata = { git = "https://github.com/jarry-xiao/metaplex-program-library", rev="7e2810a", features = [ "no-entrypoint" ] }
bubblegum = { path = "../bubblegum", features = ["cpi"] }
gummyroll = { path = "../gummyroll", features = ["cpi"] }
bytemuck = "1.8.0"

[profile.release]
overflow-checks = true